<resources>
    <string name="app_name">GroupChatProject</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create new account</string>
    <string name="welcome_first">Welcome!</string>
    <string name="add_image">Add Image</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout_button">logout button</string>
    <string name="type_your_message">type your message</string>
    <string name="select_user">Select user</string>
    <string name="add_fab">Add FAB</string>
    <string name="send_button">Send button</string>
</resources>